@@ -3,6 +3,7 @@ Revision history for Test-Ping
 0.06
         moved t/05-udp_tcp_inst.t to t/05-udp_tcp_stream_syn_inst.t
         adding test for stream inst and syn inst
+        added t/06-alarm.t
 
 0.05    26.04.09
         some POD changes and subroutine returns to keep up with perlcritic
